--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
 name = "yelp-spark-project"
 version = "0.1.0"
-description = "Add your description here"
+description = "Big data processing with Spark for Yelp dataset"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = []
+license = { file = "UNLICENSE" }
