--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "flake8>=7.3.0",
     "pre-commit>=4.5.1",
     "pyright>=1.1.408",
+    "pyspark>=4.1.1",
 ]
 license = { file = "UNLICENSE" }
 
