--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "pre-commit>=4.5.1",
     "pyright>=1.1.408",
     "pyspark>=4.1.1",
+    "requests>=2.32.5",
+    "tqdm>=4.67.3",
 ]
 license = { file = "UNLICENSE" }
 
